--- a/components/form-vertical.css
+++ b/components/form-vertical.css
@@ -4,7 +4,8 @@
     display: flex;
     flex-flow: column nowrap;
     gap: 10px;
-    width: 100%;
+    width: inherit;
+    max-width: inherit;
 }
 
 .form-vertical__label {
